fix : banner & title style

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Arxiv Sanity Preserver</title>
+<meta charset="UTF-8">
+<title>🔨유씅의 엉망진창 개발실🔨</title>
 
 <!-- MathJax -->
 <script type="text/x-mathjax-config">
@@ -187,9 +187,9 @@ $(document).ready(function(){
   <!-- Site information/banner on top left -->
 	<a href="/">
 	<div id="tittxt">
-		<h1>Arxiv Sanity Preserver</h1>
-		Built in spare time by <a href="https://twitter.com/karpathy">@karpathy</a> to accelerate research.<br>
-		Serving last {{ totpapers }} papers from cs.[CV|CL|LG|AI|NE]/stat.ML
+	<h1>🔨 유씅의 엉망진창 개발실 🔨</h1>
+	email : <a href="mailto:tmdgh0124@korea.ac.kr">tmdgh0124@korea.ac.kr</a><br>
+	github : <a href="https://github.com/YooSeungHo0124/arxiv-sanity-preserver">https://github.com/YooSeungHo0124/arxiv-sanity-preserver</a>
 	</div>
 	</a>
 </div>
