--- a/static/style.css
+++ b/static/style.css
@@ -66,13 +66,13 @@ h1 {
 #titdiv {
 	width: auto;
 	height: 70px;
-	background-color: #840000;
+	background-color: #c85d5d;
 	color: white;
 
 	padding-top: 20px;
 	padding-left: 20px;
 
-	border-bottom: 1px solid #540000;
+	border-bottom: 1px solid #a44a4a;
 }
 #tittxt {
 	width: 500px;
